--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -3,38 +3,176 @@
         <h2 class="gallery-title">Ice-cream's gallery</h2>
         <ul class="gallery-list">
             <li class="gallery-list__column-1">
-                
-                <img class="gallery-list__pictures picture-1" src="./images/home-pic11.jpg" alt="" width="138px" height="138.68px" >
-                
+                <picture>
+                    <source 
+                        media="screen and (max-width:767px)" 
+                        srcset="./images/home-pic-M-11.jpg 1x, ./images/home-pic-M-11-@2x.jpg 2x" />
+                    <source 
+                        media="screen and (min-width:768px) and (max-width: 1199px)" 
+                        srcset="./images/home-pic-T-11.jpg 1x, ./images/home-pic-T-11-@2x.jpg 2x" />
+                    <source 
+                        media="screen and (min-width:1200px)" 
+                        srcset="./images/home-pic11.jpg 1x, ./images/home-pic11-@2x.jpg 2x" />
+                <img class="gallery-list__pictures picture-1" 
+                    src="./images/home-pic11.jpg" 
+                    alt="" 
+                    width="138px" 
+                    height="138.68px" >
+                </picture>
             </li>
             <li class="gallery-list__column-2">
-                
-                <img class="gallery-list__pictures picture-2" src="./images/home-pic21.jpg" alt="" width="138px" height="138.68px">
-                <img class="gallery-list__pictures picture-3" src="./images/home-pic22.jpg" alt="" width="138px" height="138.68px">
-                
+                <picture>
+                    <source 
+                        media="screen and (max-width:767px)" 
+                        srcset="./images/home-pic-M-21.jpg 1x, ./images/home-pic-M-21-@2x.jpg 2x" />
+                    <source 
+                        media="screen and (min-width:768px) and (max-width: 1199px)" 
+                        srcset="./images/home-pic-T-21.jpg 1x, ./images/home-pic-T-21-@2x.jpg 2x" />
+                    <source 
+                        media="screen and (min-width:1200px)" 
+                        srcset="./images/home-pic21.jpg 1x, ./images/home-pic21-@2x.jpg 2x" />
+                <img class="gallery-list__pictures picture-2" 
+                    src="./images/home-pic21.jpg"
+                     alt="" 
+                     width="138px" 
+                     height="138.68px">
+                </picture>
+                <picture>
+                    <source 
+                        media="screen and (max-width:767px)" 
+                        srcset="./images/home-pic-M-22.jpg 1x, ./images/home-pic-M-22-@2x.jpg 2x" />
+                    <source 
+                        media="screen and (min-width:768px) and (max-width: 1199px)" 
+                        srcset="./images/home-pic-T-22.jpg 1x, ./images/home-pic-T-22-@2x.jpg 2x" />
+                    <source 
+                        media="screen and (min-width:1200px)" 
+                        srcset="./images/home-pic22.jpg 1x, ./images/home-pic22-@2x.jpg 2x" />
+                <img class="gallery-list__pictures picture-3" 
+                    src="./images/home-pic22.jpg" 
+                    alt="" 
+                    width="138px" 
+                    height="138.68px">
+                </picture>
             </li>
             <li class="gallery-list__column-3">
-                
-                <img class="gallery-list__pictures picture-4" src="./images/home-pic31.jpg" alt="" width="283px" height="283.34px">
-                <img class="gallery-list__pictures picture-5" src="./images/home-pic32.jpg" alt="" width="138px" height="138.68px">
-                
+                <picture>
+                    <source 
+                        media="screen and (max-width:767px)" 
+                        srcset="./images/home-pic-M-31.jpg 1x, ./images/home-pic-M-31-@2x.jpg 2x" />
+                    <source 
+                        media="screen and (min-width:768px) and (max-width: 1199px)" 
+                        srcset="./images/home-pic-T-31.jpg 1x, ./images/home-pic-T-31-@2x.jpg 2x" />
+                    <source 
+                        media="screen and (min-width:1200px)" 
+                        srcset="./images/home-pic31.jpg 1x, ./images/home-pic31-@2x.jpg 2x" />
+                <img class="gallery-list__pictures picture-4" 
+                    src="./images/home-pic31.jpg" 
+                    alt="" 
+                    width="283px" 
+                    height="283.34px">
+                </picture>
+                <picture>
+                    <source 
+                        media="screen and (max-width:767px)" 
+                        srcset="./images/home-pic-M-32.jpg 1x, ./images/home-pic-M-32-@2x.jpg 2x" />
+                    <source 
+                        media="screen and (min-width:768px) and (max-width: 1199px)" 
+                        srcset="./images/home-pic-T-32.jpg 1x, ./images/home-pic-T-32-@2x.jpg 2x" />
+                    <source 
+                        media="screen and (min-width:1200px)" 
+                        srcset="./images/home-pic32.jpg 1x, ./images/home-pic32-@2x.jpg 2x" />
+                <img class="gallery-list__pictures picture-5" 
+                    src="./images/home-pic32.jpg" 
+                    alt="" 
+                    width="138px" 
+                    height="138.68px">
+                </picture>
             </li>
             <li class="gallery-list__column-4">
-                
-                <img class="gallery-list__pictures picture-6" src="./images/home-pic41.jpg" alt="" width="138px" height="138.68px">
-                <img class="gallery-list__pictures picture-7" src="./images/home-pic42.jpg" alt="" width="138px" height="138.68px">
-                
+                <picture>
+                    <source 
+                        media="screen and (max-width:767px)" 
+                        srcset="./images/home-pic-M-41.jpg 1x, ./images/home-pic-M-41-@2x.jpg 2x" />
+                    <source 
+                        media="screen and (min-width:768px) and (max-width: 1199px)" 
+                        srcset="./images/home-pic-T-41.jpg 1x, ./images/home-pic-T-41-@2x.jpg 2x" />
+                    <source 
+                        media="screen and (min-width:1200px)" 
+                        srcset="./images/home-pic41.jpg 1x, ./images/home-pic41-@2x.jpg 2x" />
+                <img class="gallery-list__pictures picture-6" 
+                    src="./images/home-pic41.jpg" 
+                    alt="" 
+                    width="138px" 
+                    height="138.68px">
+                </picture>
+                <picture>
+                    <source 
+                        media="screen and (max-width:767px)" 
+                        srcset="./images/home-pic-M-42.jpg 1x, ./images/home-pic-M-42-@2x.jpg 2x" />
+                    <source 
+                        media="screen and (min-width:768px) and (max-width: 1199px)" 
+                        srcset="./images/home-pic-T-42.jpg 1x, ./images/home-pic-T-42-@2x.jpg 2x" />
+                    <source 
+                        media="screen and (min-width:1200px)" 
+                        srcset="./images/home-pic42.jpg 1x, ./images/home-pic42-@2x.jpg 2x" />
+                <img class="gallery-list__pictures picture-7" 
+                    src="./images/home-pic42.jpg" 
+                    alt="" 
+                    width="138px" 
+                    height="138.68px">
+                </picture>
             </li>
             <li class="gallery-list__column-5">
-                
-                <img class="gallery-list__pictures picture-8" src="./images/home-pic51.jpg" alt="" width="138px" height="138.68px">
-                <img class="gallery-list__pictures picture-9" src="./images/home-pic52.jpg" alt="" width="138px" height="138.68px">
-                
+                <picture>
+                <source 
+                    media="screen and (max-width:767px)" 
+                    srcset="./images/home-pic-M-51.jpg 1x, ./images/home-pic-M-51-@2x.jpg 2x" />
+                <source 
+                    media="screen and (min-width:768px) and (max-width: 1199px)" 
+                    srcset="./images/home-pic-T-51.jpg 1x, ./images/home-pic-T-51-@2x.jpg 2x" />
+                <source 
+                    media="screen and (min-width:1200px)" 
+                    srcset="./images/home-pic51.jpg 1x, ./images/home-pic51-@2x.jpg 2x" />
+                <img class="gallery-list__pictures picture-8" 
+                    src="./images/home-pic51.jpg" 
+                    alt="" 
+                    width="138px" 
+                    height="138.68px">
+                </picture>
+                <picture>
+                <source 
+                    media="screen and (max-width:767px)" 
+                    srcset="./images/home-pic-M-52.jpg 1x, ./images/home-pic-M-52-@2x.jpg 2x" />
+                <source 
+                    media="screen and (min-width:768px) and (max-width: 1199px)" 
+                    srcset="./images/home-pic-T-52.jpg 1x, ./images/home-pic-T-52-@2x.jpg 2x" />
+                <source 
+                    media="screen and (min-width:1200px)" 
+                    srcset="./images/home-pic52.jpg 1x, ./images/home-pic52-@2x.jpg 2x" />
+                <img class="gallery-list__pictures picture-9" 
+                    src="./images/home-pic52.jpg" 
+                    alt="" 
+                    width="138px" 
+                    height="138.68px">
+                </picture>
             </li>
             <li class="gallery-list__column-6">
-               
-                <img class="gallery-list__pictures picture-10" src="./images/home-pic61.jpg" alt="" width="138px" height="138.68px">
-                
+               <picture>
+                <source 
+                    media="screen and (max-width:767px)" 
+                    srcset="./images/home-pic-M-61.jpg 1x, ./images/home-pic-M-61-@2x.jpg 2x" />
+                <source 
+                    media="screen and (min-width:768px) and (max-width: 1199px)" 
+                    srcset="./images/home-pic-T-61.jpg 1x, ./images/home-pic-T-61-@2x.jpg 2x" />
+                <source 
+                    media="screen and (min-width:1200px)" 
+                    srcset="./images/home-pic61.jpg 1x, ./images/home-pic61-@2x.jpg 2x" />
+                <img class="gallery-list__pictures picture-10" 
+                    src="./images/home-pic61.jpg" 
+                    alt="" 
+                    width="138px" 
+                    height="138.68px" />
+               </picture>
             </li>
         </ul>
     </div>
