mobile version customer

--- a/src/partials/about-section.html
+++ b/src/partials/about-section.html
@@ -1,3 +1,6 @@
+
+
+
 <section class="about">
   <div class="container">
     <h3 class="about__label">tradition and love</h3>
@@ -28,9 +31,9 @@
         </p>
         <button class="about__button" type="button">
           Read more
-          <svg class="about__icon" width="8" height="10">
+          <!-- <svg class="about__icon" width="8" height="10">
             <use href=""></use>
-          </svg>
+          </svg> -->
         </button>
       </div>
     </div>
