--- a/src/sass/gallery.scss
+++ b/src/sass/gallery.scss
@@ -90,6 +90,33 @@
     transition: 500ms;
 }
 
-// @media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
+    .gallery {
+        max-width: 480px;
+    }
+    .gallery-list {
+        gap: 3px;
+    }
+    .gallery-list__pictures {
+        margin-bottom: 3px;
+        border-radius: 8px;
+    }
+}
 
-// }
+@media (min-width: 768px) and (max-width: 1199px) {
+    .gallery {
+        max-width: 768px;
+    }
+    .gallery-list {
+        gap: 5px;
+    }
+    .gallery-list__pictures {
+        margin-bottom: 5px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .gallery {
+        max-width: 1200px;
+    }
+}
