--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -716,7 +716,7 @@
 .inner-div-2 {
   width: 528px;
   height: 581px;
-  background: #ffffff;
+  background: $brown-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
