update customer review

--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -35,15 +35,20 @@ body {
   list-style: none;
 }
 
-// @media screen and (min-width: 768px) {
-//     .container {
-//       width: 768px;
-//     }
-//   }
+.container {
+  margin: 0 auto;
+  width: 480px;
+ }
+
+@media screen and (min-width: 768px) {
+    .container {
+      width: 768px;
+    }
+  }
   
-//   @media screen and (min-width: 1280px) {
-//     .container {
-//       width: 1280px;
-//     }
-//   }
+  @media screen and (min-width: 1280px) {
+    .container {
+      width: 1280px;
+    }
+  }
 
