--- a/src/sass/components/_footer-section.scss
+++ b/src/sass/components/_footer-section.scss
@@ -13,6 +13,7 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $thirdColor;
+    padding-left: 16px;
   }
   &__second-title {
     font-weight: 400;
