Added tablet and mobile for footer and contacts-locations

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -43,6 +43,7 @@
       </div>
     </div>
   </div>
-  <p class="copyright">© 2022 - IceCream. All Rights Reserved. </p>
-
+  <div class="copyright-border">
+    <p class="copyright container">© 2022 - IceCream. All Rights Reserved.</p>
+  </div>
 </footer>
