--- a/src/sass/_contacts-locations.scss
+++ b/src/sass/_contacts-locations.scss
@@ -7,8 +7,8 @@
   flex-direction: column;
   gap: 60px;
   position: relative;
-  height: 600px;
   align-items: center;
+  height: 1520px;
 }
 
 .contacts-location-block {
@@ -20,7 +20,7 @@
     font-size: 16px;
     text-align: center;
     letter-spacing: 0.04em;
-    color: #ffffff;
+    color: var(--button-white-color);
     background: #f0d1a5;
     border-radius: 6px;
     width: 75.1px;
@@ -141,6 +141,9 @@
   flex-direction: row;
   gap: 32px;
   justify-content: center;
+}
+
+.grid--location {
   position: absolute;
   top: -99px;
 }
@@ -151,4 +154,73 @@
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
   width: 368px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .contacts-location {
+    height: 400px;
+  }
+
+  .grid--location-size {
+    padding: 40px 32px;
+  }
+
+  .grid--location-size {
+    width: 224px;
+  }
+  .grid--location {
+    top: -298px;
+  }
+  .location__description {
+    width: 159px;
+    font-size: 14px;
+    line-height: 166%;
+  }
+  .location__title {
+    font-size: 14px;
+  }
+  .location__time {
+    font-size: 14px;
+  }
+  .location__contact {
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 0px) and (max-width: 767px) {
+  .grid--location-size {
+    padding: 40px 32px;
+  }
+
+  .grid--location-size {
+    width: 280px;
+  }
+  .grid--location {
+    top: -298px;
+    flex-direction: column;
+  }
+  .location__description {
+    width: 159px;
+    font-size: 12px;
+    line-height: 166%;
+  }
+  .location__title {
+    font-size: 12px;
+  }
+  .location__time {
+    font-size: 12px;
+  }
+  .location__contact {
+    font-size: 12px;
+  }
+
+  .contacts-locations-buttons {
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .contacts-location {
+    height: 600px;
+  }
 }
