--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -79,8 +79,12 @@
   color: #907e82;
   display: flex;
   justify-content: center;
-  border-top: 1px solid #e1e1e1;
   padding: 4px 0px;
+  width: 150px;
+}
+
+.copyright-border {
+  border-top: 1px solid #e1e1e1;
 }
 
 .footer-contact {
@@ -91,5 +95,71 @@
 
   &__link {
     color: var(--main-color-dark);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-container {
+    padding: 40px 20px 40px 16px;
+  }
+
+  .footer-contact {
+    font-size: 14px;
+    line-height: 186%;
+  }
+
+  .footer-block-left .slogan1 {
+    font-size: 26px;
+    line-height: 30px;
+    font-weight: 400;
+    width: 340px;
+  }
+
+  .footer-block-left .slogan2 {
+    font-size: 48px;
+    line-height: 55px;
+    letter-spacing: 0.06em;
+    width: 340px;
+  }
+
+  .footer-block-right {
+    justify-content: center;
+  }
+
+  .copyright {
+    width: 280px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer-container {
+    padding: 40px 20px;
+  }
+
+  .footer-blocks {
+    flex-direction: column;
+    gap: 40px;
+  }
+
+  .footer-contact {
+    font-size: 14px;
+    line-height: 186%;
+  }
+
+  .footer-block-left .slogan1 {
+    font-size: 18px;
+    line-height: 21px;
+    width: 232px;
+  }
+
+  .footer-block-left .slogan2 {
+    font-size: 34px;
+    line-height: 39px;
+    letter-spacing: 0.04em;
+    width: 200px;
+  }
+
+  .footer-block-right {
+    align-items: flex-end;
   }
 }
