--- a/src/partials/contacts-locations.html
+++ b/src/partials/contacts-locations.html
@@ -1,7 +1,7 @@
 <article class="contacts-location-section">
   <div class="container">
     <div class="contacts-location">
-      <ul class="grid">
+      <ul class="grid grid--location">
         <li class="grid__item grid--location-size">
           <div class="contacts-location-block">
             <h3 class="contacts-location-block__type">CAFE</h3>
