--- a/src/sass/components/_footer-section.scss
+++ b/src/sass/components/_footer-section.scss
@@ -33,6 +33,9 @@
   }
   &__section {
     display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-bottom: 0px;
     justify-content: space-between;
   }
   &__contacts {
@@ -77,5 +80,66 @@
     line-height: 186%;
     letter-spacing: 0.02em;
     color: #907e82;
+  }
+  &__copyright-container {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+//Tablet
+
+@media screen and (min-width: 768px) {
+  .footer::after {
+    bottom: 40px;
+  }
+
+  .footer__section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .footer__signature-title {
+    width: 340px;
+    margin-bottom: 0;
+  }
+
+  .footer__social-item {
+    width: 34px;
+    height: 34px;
+  }
+
+  .footer__social-icon {
+    width: 34px;
+    height: 34px;
+  }
+
+  .footer__copyright {
+    padding-top: 8px;
+    width: 278px;
+  }
+
+  .footer__copyright-text {
+    letter-spacing: 0.02em;
+    margin-bottom: 6px;
+  }
+}
+
+//Desktop
+
+@media screen and (max-width: 1199px) {
+  .footer__title {
+    width: 480px;
+  }
+
+  .footer__copyright {
+    padding-top: 7px;
+    width: 150px;
+  }
+
+  .footer__copyright-text {
+    margin-bottom: 4px;
   }
 }
