--- a/src/partials/footer-section.html
+++ b/src/partials/footer-section.html
@@ -23,7 +23,7 @@
                         </a>
                     </li>
                     <li class="footer__social-item">
-                        <a href="" class="footer__social-link link" rel="noopener noreferrer" target="_blank">
+                        <a href="" class="footer__social-link" rel="noopener noreferrer" target="_blank">
                             <svg class="footer__social-icon" width="32" height="32">
                                 <use href="./images/sprite.svg#icon-facebook"></use>
                             </svg>
