--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,6 +3,7 @@
 @import './components/about';
 @import './components/advantages';
 @import './components/products';
+@import './components/gallery';
 
 .container {
   margin: 0 auto;
