--- a/src/partials/contacts-section.html
+++ b/src/partials/contacts-section.html
@@ -1,6 +1,6 @@
 <section class="contacts">
     <div class="container">
-        <ul class="contacts-list">
+        <ul class="contacts-list list-style">
             <li class="contacts-list__item">
                 <p class="contacts-list__item-product contacts-list__item-cafe">CAFE</p>
                 <div class="contacts-list__item-location">
@@ -8,7 +8,7 @@
                     <p class="contacts-list__item-text">Fusce ut velit laoreet, tempus arcu molestie vulputate
                     </p>
                 </div>
-                <ul class="contacts-list__item-program-list list">
+                <ul class="contacts-list__item-program-list list-style">
                     <li class="contacts-list__item-program">
                         <p class="contacts-list__item-program-day">Monday - Friday</p>
                         <p class="contacts-list__item-program-time">06:00 AM - 10:00 PM</p>
@@ -18,7 +18,7 @@
                         <p class="contacts-list__item-program-time">08:00 AM - 16:00 PM</p>
                     </li>
                 </ul>
-                <ul class="contacts-list__item-address-list list">
+                <ul class="contacts-list__item-address-list list-style">
                     <li class="contacts-list__item-address">
                         <a class="contact-list__item-link" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
                     </li>
@@ -35,7 +35,7 @@
                     </p>
                 </div>
 
-                <ul class="contacts-list__item-program-list list">
+                <ul class="contacts-list__item-program-list list-style">
                     <li class="contacts-list__item-program">
                         <p class="contacts-list__item-program-day">Monday - Friday</p>
                         <p class="contacts-list__item-program-time">06:00 AM - 10:00 PM</p>
@@ -45,7 +45,7 @@
                         <p class="contacts-list__item-program-time">08:00 AM - 16:00 PM</p>
                     </li>
                 </ul>
-                <ul class="contacts-list__item-address-list list">
+                <ul class="contacts-list__item-address-list list-style">
                     <li class="contacts-list__item-address">
                         <a class="contact-list__item-link" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
                     </li>
@@ -62,7 +62,7 @@
                     <p class="contacts-list__item-text">Fusce ut velit laoreet, tempus arcu molestie vulputate
                     </p>
                 </div>
-                <ul class="contacts-list__item-progra-list list">
+                <ul class="contacts-list__item-program-list list-style">
                     <li class="contacts-list__item-program">
                         <p class="contacts-list__item-program-day">Monday - Friday</p>
                         <p class="contacts-list__item-program-time">06:00 AM - 10:00 PM</p>
@@ -72,7 +72,7 @@
                         <p class="contacts-list__item-program-time">08:00 AM - 16:00 PM</p>
                     </li>
                 </ul>
-                <ul class="contacts-list__item-address-list list">
+                <ul class="contacts-list__item-address-list list-style">
                     <li class="contacts-list__item-address">
                         <a class="contact-list__item-link" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
                     </li>
