--- a/src/sass/components/_contact-section.scss
+++ b/src/sass/components/_contact-section.scss
@@ -1,21 +1,282 @@
 @import 'src/sass/utils/_vars.scss';
+.contacts {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-image: linear-gradient(#ffffff 20%, #fff5f6 20%);
+}
+
+.contacts-list {
+  margin-bottom: 32px;
+}
+
+.contacts-list__item-product {
+  font-family: 'DM Sans', sans-serif;
+  color: #ffffff;
+}
+
+.contacts-list__item-cafe {
+  background: #f0d1a5;
+  border-radius: 4px;
+  padding: 2px 10px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.contacts-list__item-foodtruck {
+  background: #c2e297;
+  border-radius: 4px;
+  padding: 2px 10px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.list-style {
+  list-style: none;
+}
 .contacts-list__item {
-  width: 280px;
-  height: 412px;
-  left: 20px;
-  top: 4896px;
   background: #ffffff;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
+  padding: 40px 32px;
+  max-width: 440px;
+  margin-right: auto;
+  margin-left: auto;
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
 }
+
+.contacts-list__item-location {
+  margin-bottom: 24px;
+}
+
+.contacts-list__item-town {
+  font-family: 'DM Sans', sans-serif;
+  color: #000000;
+  margin-bottom: 8px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 186%;
+}
+
+.contacts-list__item-text {
+  font-family: 'DM Sans', sans-serif;
+  color: #907e82;
+  padding-bottom: 24px;
+  border-bottom: 1px solid #e1e1e1;
+}
+
+.contacts-list__item-program-list {
+  margin-bottom: 24px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid #e1e1e1;
+}
+
 .contacts-list__item-program-day {
   font-family: 'DM Sans';
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 186%;
-
   letter-spacing: 0.04em;
-
   color: #000000;
+}
+
+.contacts-list__item-program-time {
+  font-family: 'DM Sans', sans-serif;
+  color: #ffa5ba;
+  margin-bottom: 8px;
+}
+
+.contact-list__item-link {
+  text-decoration: none;
+  font-family: 'DM Sans', sans-serif;
+  color: #907e82;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: #d41443;
+  }
+}
+
+.contacts-list-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.contacts-list-btn__item {
+  margin-bottom: 10px;
+}
+
+.contacts-list-btn__item-locations {
+  background: #d41342;
+  border-radius: 22px;
+  font-family: 'DM Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  padding-left: 17px;
+  padding-right: 17px;
+  width: 162px;
+  height: 44px;
+}
+
+.contacts-list-btn__location-icon {
+  width: 8px;
+  height: 10px;
+  margin-left: 8px;
+  align-items: center;
+  justify-content: center;
+}
+
+.contacts-list-btn__item-franchise {
+  background: #ffffff;
+  border-radius: 22px;
+  font-family: 'DM Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  color: #d41443;
+  padding-left: 32px;
+  padding-right: 32px;
+  width: 161px;
+  height: 44px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: #ecebeb;
+  }
+}
+
+.contacts-list-btn__franchise-icon {
+  width: 8px;
+  height: 10px;
+  margin-left: 8px;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and(min-width:768px) {
+  .contacts {
+    padding-top: 80px;
+  }
+
+  .contacts-list {
+    margin-bottom: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .contacts-list__item:not(:last-child) {
+    margin-bottom: 0px;
+    margin-right: 32px;
+  }
+
+  .contacts-list__item-cafe {
+    width: 73px;
+    height: 28px;
+    margin-bottom: 32px;
+  }
+
+  .contacts-list__item-foodtruck {
+    width: 138px;
+    height: 28px;
+
+    margin-bottom: 32px;
+  }
+
+  .contacts-list__item-town {
+    margin-bottom: 12px;
+  }
+
+  .contacts-list__item-location {
+    margin-bottom: 32px;
+  }
+
+  .contacts-list__item-text {
+    padding-bottom: 32px;
+  }
+
+  .contacts-list__item-program-list {
+    margin-bottom: 32px;
+    padding-bottom: 32px;
+  }
+
+  .contacts-list__item-program-time {
+    margin-bottom: 12px;
+  }
+
+  .contacts-list-btn {
+    flex-direction: row;
+  }
+
+  .contacts-list-btn__item {
+    margin-bottom: 0px;
+    &:not(:last-child) {
+      margin-right: 14.5px;
+    }
+  }
+
+  .contacts-list-btn__item-locations {
+    padding-left: 30px;
+    width: 191px;
+    height: 44px;
+  }
+
+  .contacts-list-btn__item-franchise {
+    padding-left: 37px;
+    width: 174px;
+    height: 44px;
+  }
+}
+
+.contacts-list-btn__location-icon {
+  stroke: #ffffff;
+}
+
+.contacts-list-btn__franchise-icon {
+  stroke: #d41443;
+}
+
+@media screen and(min-width:1280px) {
+  .contacts {
+    padding-top: 120px;
+    padding-bottom: 121px;
+  }
+
+  .contacts-list__item-cafe {
+    width: 75px;
+  }
+
+  .contacts-list__item-town {
+    margin-bottom: 8px;
+  }
+
+  .contacts-list-btn__item:not(:last-child) {
+    margin-right: 12px;
+  }
+
+  .contacts-list-btn__item-locations {
+    padding-left: 35px;
+    width: 198px;
+  }
+
+  .contacts-list-btn__item-franchise {
+    padding-left: 36px;
+    width: 168px;
+  }
 }
