--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -16,9 +16,9 @@
 <header>
     <div class="container header-section">
       <div class="header">
-        <svg class="header__icon" width="199" height="50">
+        <!-- <svg class="header__icon" width="199" height="50">
           <use href="images/header-hero/icons.svg#icon-logo"></use>
-        </svg>
+        </svg> -->
         <nav>
         <ul class="header__list">
           <li><a class="header__item" href="#">Home</a></li>
