--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -46,11 +46,6 @@
           <li>
             <button class="button--white">How it's made?</button>
           </li>
-          <li>
-            <button class="button--red hide--button" data-modal-open1>
-              Buy now
-            </button>
-          </li>
         </ul>
         <div class="hero__inner--left--div">
           <div class="hero__inner--left--img"></div>
@@ -98,6 +93,14 @@
     </button>
 
     <ul class="mobile-menu">
+      <li class="mobile-menu__item">
+        <button class="mobile-menu__button" data-modal-open>
+          Buy now
+          <svg class="header__button__icon">
+            <use href="./images/hero-header/symbol.svg#icon-arrow"></use>
+          </svg>
+        </button>
+      </li>
       <li class="mobile-menu__item">
         <a class="link" href="#">Home</a>
       </li>
