--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,9 +1,9 @@
 <!--Contacts-->
 
 <section class="contacts">
+  <h2 class="contacts__title-1">Contact</h2>
   <div class="container contacts__inner-section">
     <div class="contacts__inner">
-      <h2 class="contacts__title-1">Contact</h2>
       <ul class="contacts__items unstyled-list">
         <li class="contacts__title"><p>CAFE</p></li>
         <li class="contacts__subtitle"><h3>Chicago</h3></li>
@@ -49,7 +49,9 @@
       <ul class="time-schedule unstyled-list">
         <li class="time-schedule__days"><h3>Monday - Friday</h3></li>
         <li class="time-schedule__hours"><p>06:00 AM - 10:00 PM</p></li>
-        <li class="time-schedule__days"><h3>Saturday - Sunday</h3></li>
+        <li class="time-schedule__days time-schedule--days2">
+          <h3>Saturday - Sunday</h3>
+        </li>
         <li class="time-schedule__hours"><p>08:00 AM - 16:00 PM</p></li>
       </ul>
 
@@ -79,7 +81,9 @@
       <ul class="time-schedule unstyled-list">
         <li class="time-schedule__days"><h3>Monday - Friday</h3></li>
         <li class="time-schedule__hours"><p>06:00 AM - 10:00 PM</p></li>
-        <li class="time-schedule__days"><h3>Saturday - Sunday</h3></li>
+        <li class="time-schedule__days time-schedule--days2">
+          <h3>Saturday - Sunday</h3>
+        </li>
         <li class="time-schedule__hours"><p>08:00 AM - 16:00 PM</p></li>
       </ul>
 
