--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -277,6 +277,8 @@
     align-items: center;
     justify-content: center;
     gap: 8px;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
   }
   &__items:hover {
     transform: scale(1.1);
@@ -566,11 +568,11 @@
     border: 1px solid $secondary-color;
     background: $white-color;
     color: $black-color;
-    width: 30px;
-    height: 30px;
+    width: 11px;
+    height: 11px;
     position: relative;
-    left: 490px;
-    bottom: 90px;
+    left: 275px;
+    bottom: 73px;
   }
   &__button:hover {
     background-color: $secondary-color;
@@ -586,19 +588,16 @@
 
   &__title {
     font-weight: 700;
-    font-size: 20px;
+    font-size: 14px;
     line-height: 23px;
     text-align: center;
     color: $primary-color;
-    padding-bottom: 14px;
-    padding-top: 40px;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding: 20px 20px 14px;
   }
 }
-.inner-div {
-  width: 528px;
-  height: 581px;
+.modal__inner {
+  width: 300px;
+  height: 500px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -618,8 +617,8 @@
     color: $primary-color;
   }
   &__input {
-    width: 370px;
-    height: 40px;
+    width: 220px;
+    height: 30px;
     border: 1px solid $gray-color;
     border-radius: 4px;
     margin-top: 4px;
@@ -645,8 +644,8 @@
     color: $primary-color;
   }
   &__text-area {
-    width: 370px;
-    height: 120px;
+    width: 220px;
+    height: 100px;
     border: 1px solid $secondary-color;
     border-radius: 4px;
     margin-top: 4px;
@@ -688,6 +687,8 @@
   line-height: 30px;
   cursor: pointer;
   padding: 0;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .button-footer:hover {
   background-color: $secondary-color;
@@ -701,6 +702,63 @@
   visibility: hidden;
   opacity: 0;
 }
+
+/*Media-modala-768*/
+@media screen and (min-width: 768px) {
+  .modal {
+    &__inner {
+      width: 450px;
+      height: 609px;
+    }
+    &__title {
+      padding: 40px 50px 14px 50px;
+      font-size: 20px;
+    }
+    &__button {
+      width: 30px;
+      height: 30px;
+      left: 405px;
+      bottom: 90px;
+    }
+  }
+  .form {
+    &__input {
+      height: 40px;
+      width: 400px;
+    }
+    &__text-area {
+      height: 120px;
+      width: 400px;
+    }
+  }
+  .button-footer {
+    margin-top: 10px;
+  }
+}
+
+/*Media-modala-1280*/
+@media screen and (min-width: 1200px) {
+  .modal {
+    &__button {
+      left: 475px;
+    }
+    &__inner {
+      width: 528px;
+      height: 581px;
+    }
+  }
+  .form {
+    &__input {
+      width: 448px;
+    }
+    &__text-area {
+      width: 448px;
+    }
+  }
+  .button-footer {
+    margin-top: 0;
+  }
+}
 /*Modala-2*/
 .modal-2 {
   background: rgba(0, 0, 0, 0.2);
@@ -713,19 +771,19 @@
   align-items: center;
 }
 
-.inner-div-2 {
-  width: 528px;
-  height: 581px;
+.modal-2__inner {
+  width: 300px;
+  height: 500px;
   background: $brown-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   border: 3px solid $secondary-color;
 }
-.modal-2-button {
+.modal-2__button-close {
   display: flex;
-  width: 30px;
-  height: 30px;
+  width: 11px;
+  height: 11px;
   border-radius: 50%;
   padding: 0;
   align-items: center;
@@ -735,22 +793,22 @@
   margin-left: 10px;
   margin-top: 10px;
 }
-.modal-maps {
+.modal-2__maps {
   width: 100%;
 }
 
-.modal-2-container {
+.modal-2__container {
   border: 3px solid $secondary-color;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 30px;
+  margin: 5px;
 }
-.modal__title-2 {
+.modal-2__title {
   font-family: 'Titan One';
   font-style: normal;
   font-weight: $font-weight-400;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 21px;
   letter-spacing: 0.04em;
   text-transform: uppercase;
@@ -759,27 +817,30 @@
   justify-content: center;
 }
 
-.modal2-adress {
+.modal-2__adress {
   font-family: 'DM Sans';
   font-style: normal;
   font-weight: $font-weight-500;
-  font-size: $font-size-16;
+  font-size: $font-size-14;
   letter-spacing: 0.04em;
   color: $secondary-color;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 20px;
+  gap: 30px;
 }
-.modalbutton-2 {
+.modal-2__button {
   background-color: $white-color;
   border-radius: 25px;
   border-color: $secondary-color;
   padding: 10px;
-  margin-left: 170px;
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-left: 60px;
+  margin-bottom: 30px;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-.modalbutton-2:hover {
+.modal-2__button:hover {
   transform: scale(1.2);
   transition-duration: 1s;
 }
@@ -792,10 +853,70 @@
   font-weight: $font-weight-400;
   font-size: $font-size-16;
 }
-.location-svg {
+.modal-2__location-svg {
   fill: $primary-color;
 }
 .is-hidden-2 {
   display: none;
   opacity: 0;
+}
+/*Media-modala-2-768*/
+
+@media screen and (min-width: 768px) {
+  .modal-2 {
+    &__inner {
+      width: 450px;
+      height: 609px;
+    }
+    &__button-close {
+      width: 30px;
+      height: 30px;
+    }
+    &__title {
+      font-size: 18px;
+    }
+    &__container {
+      margin: 30px;
+    }
+    &__adress {
+      font-size: $font-size-16;
+      gap: 5px;
+      display: flex;
+      justify-content: center;
+      margin-left: 0;
+    }
+    &__button {
+      margin-top: 20px;
+      margin-bottom: 20px;
+      margin-left: 130px;
+    }
+  }
+}
+/*Media-modala-2-1280*/
+
+@media screen and (min-width: 1200px) {
+  .modal-2 {
+    &__inner {
+      width: 528px;
+      height: 581px;
+    }
+    &__button-close {
+      width: 30px;
+      height: 30px;
+    }
+    &__title-2 {
+      font-size: 18px;
+    }
+    &__container {
+      margin: 30px;
+    }
+    &__adress {
+      font-size: $font-size-16;
+    }
+    &__button {
+      margin-top: 10px;
+      margin-bottom: 20px;
+      margin-left: 170px;
+    }
+  }
 }
