cursor pointer added

--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -138,6 +138,7 @@
   top: 264px;
   z-index: -1;
   padding-top: 154px;
+  cursor: pointer;
 
   // For tablets
   @media only screen and (min-width: 768px) and (max-width: 1024px) {
@@ -180,6 +181,7 @@
   top: 264px;
   z-index: -1;
   padding-top: 154px;
+  cursor: pointer;
 
   // For tablets
   @media only screen and (min-width: 768px) and (max-width: 1024px) {
@@ -222,6 +224,7 @@
   top: 264px;
   z-index: -1;
   padding-top: 154px;
+  cursor: pointer;
 
   // For tablets
   @media only screen and (min-width: 768px) and (max-width: 1024px) {
