--- a/src/partials/customer-rev-section.html
+++ b/src/partials/customer-rev-section.html
@@ -1,7 +1,7 @@
-<section class="customer-rev  slider-wrapper">
+<section class="customer-rev  container slider-wrapper">
     <!-- <button class="slide-arrow" id="slide-arrow-prev">&#8249;</button><button class="slide-arrow" id="slide-arrow-next">&#8250;</button> -->
     <h2 hidden class="customer-rev__title">Customer reviews</h2>
-    <div class="customer-review__container container">
+    <div class="customer-review__container ">
         <!-- <ul class="slides-container" id="slides-container">
             <li class="slide visibile"> -->
                 <img class="customer-review__photo" srcset="
