--- a/src/partials/hero-header-section.html
+++ b/src/partials/hero-header-section.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="container">
+  <div class="container container--mod">
     <div class="header-nav">
       <a class="header-logo" href="#">
         <svg class="header-logo__svg" width="199px" height="50px">
