--- a/src/partials/products-section.html
+++ b/src/partials/products-section.html
@@ -1,5 +1,5 @@
 <section class="products">
-  <div class="container">
+  <div class="container container--modif">
     <p class="products__label">100% natural</p>
     <h2 class="products__title">PRODUCTS</h2>
     <ul class="products__list">
