--- a/src/sass/components/_hero-header-section.scss
+++ b/src/sass/components/_hero-header-section.scss
@@ -1,18 +1,20 @@
 @import 'src/sass/utils/_vars.scss';
 
-.unstyled-list {
-  list-style: none;
-}
+
+
+
 
 .header {
   background-color: $primaryBackgroundColor;
 }
 
-.container {
-  width: 1200px;
-  margin: auto;
+.container--mod {
   height: 664px;
 }
+
+
+
+
 
 .header-nav {
   display: flex;
@@ -132,13 +134,14 @@
     line-height: 18px;
     letter-spacing: 0em;
     text-align: center;
-  }
-  &__list-first:hover {
-    background-color: $primaryColor;
-    cursor: pointer;
-    color: $whiteColor;
-  }
 
+    &:hover {
+      background-color: $primaryColor;
+      cursor: pointer;
+      color: $whiteColor;
+    }
+  }
+  
   &__list-second {
     height: 40px;
     width: 138px;
@@ -151,13 +154,15 @@
     line-height: 18px;
     letter-spacing: 0em;
     text-align: center;
+
+    &:hover {
+      background-color: $primaryColor;
+      cursor: pointer;
+      color: $whiteColor;
+    }
   }
 
-  &__list-second:hover {
-    background-color: $primaryColor;
-    cursor: pointer;
-    color: $whiteColor;
-  }
+ 
 }
 
 .hero-number {
