--- a/src/sass/components/_products-section.scss
+++ b/src/sass/components/_products-section.scss
@@ -1,12 +1,11 @@
 @import 'src/sass/utils/_vars.scss';
 
 .products {
-  .container {
+  .container--modif {
     display: flex;
     flex-direction: column;
     padding-top: 60px;
-    margin: 0 auto;
-    width: 480px;
+    
   }
   &__label {
     font-family: $secondFamily;
@@ -138,10 +137,7 @@
 
 @media screen and (min-width: 768px) {
   .products {
-    .container {
-      width: 768px;
-    }
-    &__list {
+        &__list {
       gap: 16px;
       flex-direction: row;
       flex-wrap: nowrap;
@@ -209,7 +205,7 @@
     }
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .products {
     .container {
       display: flex;
