--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -774,7 +774,7 @@
 .modal-2__inner {
   width: 300px;
   height: 500px;
-  background: $brown-color;
+  background: $white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
